<resources>
    <string name="app_name">AllTravo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="array_name">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="loading">Loading...</string>
    <string name="title_activity_car_hire">Car Hire</string>
    <string name="tab_text_1">Salons</string>
    <string name="tab_text_2">SUVs</string>
    <string name="tab_text_3">Vans</string>
    <string name="allpro_african_safaris">AllPro African Safaris</string>
    <string name="twitter" />
    <string name="alltravo_com_gmail_com">alltravo.com@gmail.com</string>
    <string name="call_us_254740234002">Call Us +254740234002</string>
    <string name="www_allproafrican_safaris_com">www.allproafrican-safaris.com</string>
    <string name="todo">TODO</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="nairobi">Nairobi</string>
    <string name="_5_adults">5 Adults</string>
    <string name="kcz_343z">KCZ 343Z</string>
    <string name="mercede_benz">Mercede Benz</string>
    <string name="kenya">Kenya</string>
    <string name="no_of_days">No of Days*</string>
    <string name="number_of_days">Number of Days*</string>
    <string name="total_cost_ksh">Total Cost: Ksh.</string>
    <string name="agree_to_our_terms_and_conditions">Agree to our terms and conditions</string>
    <string name="read_terms_and_condtions">Read Terms and Condtions</string>

</resources>
