<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="cars.activities.CarDetailActivity">

    <include layout="@layout/toolbar_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="10dp" tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#fafafa"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/carimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/car"
                app:riv_corner_radius="6.6dip"
                app:riv_mutate_background="true" tools:targetApi="lollipop"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <utils.customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/txtcarname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/mercede_benz"
                    android:textColor="#1c252a"
                    android:textSize="15sp" />

                <utils.customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/txtcarplate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:text="@string/kcz_343z"
                    android:textColor="#1c252a"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <utils.customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/txtcarcapacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/_5_adults"
                    android:textColor="#1c252a"
                    android:textSize="15sp" />

                <utils.customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/txtcarcity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:text="@string/nairobi"
                    android:textColor="#1c252a"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <utils.customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/txtcarfee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="#0091ea"
                    android:textSize="15sp" />

                <utils.customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/txtcarcountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:text="@string/kenya"
                    android:textColor="#1c252a"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/no_of_days"
                android:textSize="17sp"
                android:textStyle="bold" />

            <utils.customfonts.EditText_Roboto_Regular
                android:id="@+id/no_of_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="#00000000"
                android:hint="@string/number_of_days"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/total_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/total_cost_ksh"
                android:textSize="17sp"
                android:textStyle="bold" />


            <CheckBox
                android:id="@+id/cbx_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/agree_to_our_terms_and_conditions" />

            <CheckBox
                android:id="@+id/checkBoxTCs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/read_terms_and_condtions"
                android:textColor="@color/black" />


        </LinearLayout>


    </LinearLayout>

    <utils.customfonts.MyTextView_Roboto_Regular
        android:id="@+id/btn_car_view_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/sign_ract"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/proceed_to_payment"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="#d4dce1" />
</LinearLayout>